Name:                vector-space-opengl
Version:             0.2
Synopsis:            Instances of vector-space classes for OpenGL types
Description:         Instances of <http://hackage.haskell.org/package/vector-space> classes for 'OpenGL' types.
License:             BSD3
License-file:        LICENSE
Author:              Adam C. Foltzer
Maintainer:          acfoltzer@gmail.com
Category:            Graphics, Math
Build-type:          Simple
Cabal-version:       >=1.8

Library
  exposed-modules:   Data.VectorSpace.OpenGL
  hs-source-dirs:    src
  extensions:        TypeFamilies, UndecidableInstances
  build-depends:     base == 4.*,
                     OpenGL >= 2.6.0,
                     vector-space == 0.8.*
